# wasm-operator

./: .dockerignore  .gitignore  .gitmodules  .markdownlint.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  native.dockerfile  wasm.dockerfile
compiled_mods/: memcached.yaml
controllers/: Cargo.toml
controllers/comb-rust-controller/: Cargo.toml
controllers/comb-rust-controller/src/: main.rs
controllers/mongodbSpammer/: Cargo.toml
controllers/mongodbSpammer/src/: main.rs
controllers/ring-go-controller/: controller.go  go.mod  go.sum  main.go
controllers/ring-go-controller/hack/: update-codegen.sh
controllers/ring-go-controller/pkg/signals/: exit.go  signal.go
controllers/ring-rust-controller/: Cargo.toml  Cross.toml
controllers/ring-rust-controller/src/: main.rs
controllers/simple-rust-controller/: Cargo.toml
controllers/simple-rust-controller/src/: main.rs
controllers/value-changer/: Cargo.toml  runChanger.sh  traces.csv
controllers/value-changer/src/: main.rs
controllers/value-changer/traces_backup/: traces.csv  traces_20.csv  traces_30.csv  traces_5.csv  traces_60.csv
deploy/: RELEASE_NOTES.tmpl.md
deploy/chart/: .gitignore  .helmignore  Chart.yaml  values.yaml
deploy/chart/crds/: crd.yaml
deploy/chart/templates/: cluster_role.yaml  cluster_role_binding.yaml  deployment.yaml  service_account.yaml
devel/: build-native.sh  build-wasm.sh  build.sh  clippy.sh  create-cluster.sh  create_cluster.sh  custom-dashboard.yaml  format.sh  install-operator.sh  kind-config.yaml  lib.sh  lib_functions.sh  native_golang.sh  native_rust.sh  run-container-native.sh  run-container-wasm.sh  run-wasm.sh  run.sh  run_wasm_rust.sh  setup-netdata.sh  setup-prometheus.sh  setup_flask_server.sh  setup_native_golang.sh  setup_native_rust.sh  setup_native_rust_combined.sh  setup_wasm_rust.sh  setup_wasm_rust_simple.sh  test.sh  tool.sh  update.sh  wasm_rust.sh
docs/: contributing.md  profiling.md  setup.md  testing.md  usage.md
ext/: Cargo.toml  cr.yaml  crd.yaml
ext-memcached/: Cargo.toml  cr.yaml  crd.yaml
ext-memcached/src/: lib.rs
ext-simple-pod/: Cargo.toml  cr.yaml
ext-simple-pod/src/: lib.rs  main.rs
ext/src/: abi.rs  lib.rs
full_test/: README.md  run.sh  run_wasm.sh
kube-rs/: Cargo.toml
kube-rs-host/: Cargo.toml
kube-rs-host/src/: lib.rs
kube-rs-host/src/api/: params.rs  resource.rs  typed.rs
kube-rs-host/src/client/: mod.rs
kube-rs-runtime/: Cargo.toml
kube-rs-runtime/src/: controller.rs  lib.rs  scheduler.rs
kube-rs-runtime/src/time/: delay.rs  delay_queue.rs  mod.rs
kube-rs/src/: error.rs  lib.rs
kube-rs/src/abi/: delay.rs  executor.rs  http.rs  kube_watch.rs  memory.rs  mod.rs
kube-rs/src/api/: crds.rs  params.rs  resource.rs  subresource.rs  typed.rs
kube-rs/src/client/: abi.rs  mod.rs
kube-rs/src/runtime/: informer.rs  mod.rs  reflector.rs
kube_runtime_abi/src/: memory.rs
pkg/controller/: Cargo.toml  Cross.toml  changetimes5.csv  reconciletimes5.csv
pkg/controller/src/: main.rs
pkg/controller/src/abi/: abicommand.rs  mod.rs  opcall.rs
pkg/controller/src/kube_client/: mod.rs
pkg/controller/src/modules/: metadata.rs  mod.rs  module.rs  runner.rs  wasm.rs
pkg/controller/src/runtime/: controller_ctx.rs  environment.rs  mod.rs
pkg/controller/src/runtime/http_engine/: mod.rs  request_executor.rs
pkg/kube-runtime-abi/: Cargo.toml
pkg/kube-runtime-abi/src/: delay.rs  error.rs  executor.rs  http_data.rs  lib.rs  memory.rs  requestor.rs
pkg/wasm-delay-queue/: Cargo.toml
pkg/wasm-delay-queue/src/: delay_queue.rs  lib.rs
pkg/wasm-delay-queue/src/wheel/: level.rs  mod.rs
poc/: Cargo.toml
poc/controller/: Cargo.toml
poc/controller/src/: main.rs  utils.rs
poc/controller/src/abi/: abicommand.rs  dispatcher.rs  mod.rs  opcall.rs
poc/controller/src/http/: mod.rs  request_executor.rs  request_stream_executor.rs
poc/controller/src/modules/: metadata.rs  module.rs
poc/controller/src/runtime/: controller_ctx.rs  environment.rs  mod.rs
poc/controller/src/runtime/http_engine/: http_data.rs  request_executor.rs
poc/kube-runtime-abi/src/: delay.rs  executor.rs  lib.rs  memory.rs  requestor.rs
poc/ring-pod-example/: Cargo.toml  simple-pod-example.yaml
poc/simple-pod-example/: Cargo.toml  simple-pod.yaml
poc/simple-pod-example/src/: main.rs
poc/temp/: 00_crd.yaml  01_namespaces.yaml  02_resource.yaml
poc/temp/native/: controller0.yaml  controller1.yaml  controller2.yaml  controller3.yaml  controller4.yaml  controller5.yaml  controller6.yaml  controller7.yaml  controller8.yaml  controller9.yaml
poc/wasm-delay-queue/src/: delay_queue.rs  error.rs  lib.rs  sleep.rs
poc/wasm-delay-queue/src/wheel/: level.rs  mod.rs
prediction/models/: .gitignore  experiments.ipynb  model1.ipynb
prediction/models/data/: typical.csv
prediction/webserver/: .dockerignore  dockerFile  main.py  requirements.txt
profile/: profile.py  profile.sh  typical.csv  wasmProfiler.py
rust-host/: Cargo.toml
rust-host/src/: main.rs
rust-host/src/abi/: abi.rs  commands.rs  dispatcher.rs  func.rs  mod.rs
rust-host/src/abi/rust_v1alpha1/: data.rs  func.rs  http_data.rs  mod.rs  watch_data.rs
rust-host/src/delay/: mod.rs
rust-host/src/http/: mod.rs
rust-host/src/kube_watch/: dispatcher.rs  mod.rs  watchers.rs
rust-host/src/modules/: metadata.rs  mod.rs  module.rs
src/: main.rs
src/abi/: commands.rs  mod.rs
src/abi/rust_v1alpha1/: mod.rs
src/delay/: mod.rs
src/http/: request_executor.rs  request_stream_executor.rs
src/modules/: module.rs
tests/native_golang/: Dockerfile
tests/native_rust/: Dockerfile
tests/native_rust_comb/: Dockerfile
tests/wasm_rust/: Dockerfile
tests/wasm_rust_simple/: Dockerfile  wasm_config.yaml
tests/wasm_rust_simple/manifests/: controller.yaml  function1.yaml  function2.yaml  function3.yaml  namespace.yaml  pod.yaml
tests/yaml/: crd.yaml  deploymentFlask.yaml  metricsServer.yaml  namespace.yaml  rbac.yaml
wasm_delay_queue/: Cargo.toml
wasm_delay_queue/src/: delay_queue.rs
wasm_delay_queue/src/wheel/: level.rs  stack.rs
(+26 files in other folders)
