[package]
name = "rust-host"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["abi-rust-v1alpha1"]

abi-rust-v1alpha1 = []

[dependencies]
log = "^0.4.14"
wasmer = "^2.0.0"
wasmer-compiler-singlepass = "^2.0.0"
wasmer-wasi = "^2.0.0"
kube = { version = "0.61.0", features = ["native-tls"] }
hyper = { version = "^0.14.13", features = ["client", "http2", "stream", "tcp"] }
hyper-tls = "^0.5.0"
tower = { version = "^0.4.6" }
tokio = { version = "^1.12.0", features = ["full"] }
tokio-util = "0.6.8"
tokio-stream = "^0.1.7"
http = "^0.2.5"
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.68"
serde_yaml = "^0.8.21"
bincode = "^1.3.3"
http-serde = "^1.0.3"
futures = "^0.3.17"
bytes = "^1.1.0"
dirs = "^4.0.0"
k8s-openapi = { version = "^0.13.1", features = ["v1_18"], default-features = false }
url = "^2.2.2"
env_logger = "^0.9.0"
anyhow = "^1.0.44"
