[package]
name = "simple-pod"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kube = { path = "../kube-rs"}
kube-derive = "0.35.1"
k8s-openapi = { version = "0.8.0", features = ["v1_18"], default-features = false }

serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
