[package]
name = "simple-pod"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kube = { path = "../kube-rs", features = ["derive"] }
kube-runtime = { path = "../kube-rs-runtime" }
k8s-openapi = { version = "0.9.0", features = ["v1_18"], default-features = false }
futures = "0.3.5"
snafu = "0.6.9"

serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"