[package]
name = "http"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
http = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
bincode = "1.3.1"
safe-transmute = "0.11.0"
http-serde = "1.0.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
