[package]
name = "http"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kube = { path = "../kube-rs"}
k8s-openapi = { version = "0.8.0", features = ["v1_18"], default-features = false }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
