[package]
name = "kube-runtime"
version = "0.42.0"
description = "Kubernetes futures controller runtime"
authors = [
  "Teo Klestrup Röijezon <teo@nullable.se>",
  "clux <sszynrae@gmail.com>",
]
license = "Apache-2.0"
repository = "https://github.com/clux/kube-rs"
keywords = ["kubernetes", "runtime", "reflector", "watcher", "controller"]
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
futures = "0.3.5"
kube = { path = "../kube-rs", version = "^0.42.0", default-features = false }
k8s-openapi = "0.9.0"
derivative = "2.1.1"
serde = "1.0.115"
smallvec = "1.4.2"
pin-project = "0.4.23"
snafu = { version = "0.6.8", features = ["futures"] }
dashmap = "3.11.10"

slab = "0.4.2"

[dev-dependencies.k8s-openapi]
version = "0.9.0"
default-features = false
features = ["v1_18"]

[dev-dependencies]
kube-derive = { version = "^0.42.0"}
serde_json = "1.0.57"
rand = "0.7.3"
