[package]
name = "kube"
version = "0.35.1"
description = "Kubernetes client in futures controller runtime"
authors = [
  "clux <sszynrae@gmail.com>",
  "ynqa <un.pensiero.vano@gmail.com>",
]
license = "Apache-2.0"
repository = "https://github.com/clux/kube-rs"
readme = "README.md"
keywords = ["kubernetes", "client", "runtime", "reflector", "informer"]
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
base64 = "0.12.1"
chrono = "0.4.11"
dirs = "2.0.2"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8.12"
http = "0.2.1"
url = "2.1.1"
log = "0.4.8"
time = "0.2.16"
either = "1.5.3"
thiserror = "1.0.19"
bytes = "0.5.6"
Inflector = "0.11.4"
once_cell = "1.4.1"

# Stuff to implement the abi
bincode = "1.3.1"
safe-transmute = "0.11.0"
http-serde = "1.0.1"

[dependencies.k8s-openapi]
version = "0.8.0"
default-features = false
features = []

[dev-dependencies]
kube-derive = "0.35.1"
tempfile = "3.1.0"
env_logger = "0.7.1"
anyhow = "1.0.31"

[dev-dependencies.k8s-openapi]
version = "0.8.0"
default-features = false
features = ["v1_18"]
