[workspace]
members = [
  "controller",
  "simple-pod-example",
  "ring-pod-example",
  "kube-runtime-abi",
  "wasm-delay-queue",
]

[profile.release]
lto = true

[profile.release.package.controller]
opt-level = 3

[profile.release.package.simple-pod-example]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.release.package.ring-pod-example]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
