[package]
name = "rust-host"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime-core = "0.17.1"
wasmer-runtime = "0.17.1"
wasmer-wasi = "0.17.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
bincode = "1.3.1"
safe-transmute = "0.11.0"
http-serde = "1.0.1"
futures = "0.3.5"
bytes = "0.5.6"
