[package]
name = "rust-host"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime-core = "0.17.1"
wasmer-runtime = "0.17.1"
wasmer-singlepass-backend = "0.17.1"
wasmer-wasi = "0.17.1"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
bincode = "1.3.1"
safe-transmute = "0.11.0"
http-serde = "1.0.1"
futures = "0.3.5"
bytes = "0.5.6"
dirs = "3.0"
kube = "0.35.1"
k8s-openapi = { version = "0.8.0", features = ["v1_18"], default-features = false }
url = "2.1.1"
env_logger = "0.7.1"