[package]
name = "rust-host"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["abi-rust-v1alpha1"]

abi-rust-v1alpha1 = []

[dependencies]
log = "0.4.0"
wasmer-runtime = "0.17.1"
wasmer-singlepass-backend = "0.17.1"
wasmer-wasi = "0.17.1"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
bincode = "1.3.1"
http-serde = "1.0.1"
futures = "0.3.5"
bytes = "0.5.6"
dirs = "3.0"
kube = { path = "../kube-rs-host"}
k8s-openapi = { version = "0.9.0", features = ["v1_18"], default-features = false }
url = "2.1.1"
env_logger = "0.7.1"
anyhow = "^1.0"