[package]
name = "ring-pod-example"
version = "0.1.0"
authors = ["Tim Ramlot <tim.ramlot@ugent.be>", "Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "^0.3.3"
tracing = { version = "0.1.29", features = ["log"] }
kube = { path = "../../pkg/kube-rs/kube", default-features = false, features = ["derive"] }
kube-runtime = { path = "../../pkg/kube-rs/kube-runtime", default-features = false, features = [] }
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_23", "schemars"] }
futures = "0.3.5"
snafu = "0.6.9"
kube-runtime-abi = { path = "../../pkg/kube-runtime-abi", version = "^0.0.1" }
chrono = "0.4.10"

schemars = { version = "0.8.3", features = ["chrono"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
log = "^0.4.14"

tokio = { version = "1.14.0", optional = true, features = ["macros", "rt-multi-thread"] }

[features]
client-wasi = ["kube/client-wasi", "kube-runtime/client-wasi"]
client = ["kube/client", "kube/rustls-tls", "kube-runtime/client", "tokio"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


[package.metadata.cross.build.env]
passthrough = [
    "COMPILE_NONCE",
]
