[package]
name = "value-changer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
kube = { version = "0.77.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
bytes = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
base64 = "0.20.0"
chrono = "0.4.10"
