[package]
name = "value-changer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
kube = { version = "0.77.0", default-features = false, features = ["client", "rustls-tls","runtime", "derive"] }
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_25", "schemars"] }
bytes = "1"
tokio = { version = "1.14.0",features = ["full"]}
base64 = "0.20.0"
chrono = "0.4.10"
snafu = "0.6.9"

kube-derive = "0.77.0"

schemars = { version = "0.8.3", features = ["chrono"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
csv = "1.1.6"


