[package]
name = "controller"
version = "0.1.0"
authors = ["Tim Ramlot <tim.ramlot@ugent.be>", "Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
futures-core = "^0.3.21"
futures-task = "^0.3.21"
log = "^0.4.16"
hyper-timeout = {version = "0.4.1"}
tracing = { version = "0.1.24", features = ["log"] }

wasmtime = { version = "^0.36.0", default-features = false, features = [
    "parallel-compilation",
    "cranelift",
    "pooling-allocator",
    "memory-init-cow",
] }
wasmtime-wasi = { version = "^0.36.0" }
kube = { path = "../kube-rs/kube", version = "0.71.0", default-features = false, features = ["client", "rustls-tls"] }
hyper = { version = "0.14.18", features = ["client", "http1", "http2", "stream", "tcp"] }
hyper-rustls = "^0.23.0"
tower = { version = "^0.4.12", features = ["limit", "timeout", "load-shed"] }
tower-http = { version = "0.2.5", features = ["trace", "decompression-gzip"] }
tower-service = { version = "^0.3.1" }
tokio = { version = "^1.17.0", features = ["full"] }
tokio-util = { version = "^0.7.1", features = ["codec", "io"] }
tokio-stream = "^0.1.8"
http = "^0.2.5"
http-body = "^0.4.4"
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.79"
serde_yaml = "^0.8.23"
bincode = "^1.3.3"
http-serde = "^1.1.0"
futures = "^0.3.21"
bytes = "^1.1.0"
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_23"] }
anyhow = "^1.0.57"
blake3 = "^1.3.1"
tracing-subscriber = "^0.3.11"
pin-project = "^1.0.10"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


[package.metadata.cross.build.env]
passthrough = [
    "COMPILE_NONCE", "COMPILE_WITH_UNINSTANTIATE"
]

