[package]
name = "kube-runtime-abi"
version = "0.0.1"
edition = "2018"
authors = []
license = "MIT"
description = """
"""

[features]
# No features on by default
default = []

[dependencies]
tracing = { version = "0.1.29", features = ["log"] }
futures = { version = "0.3.17" }
http = "0.2.5"
bincode = { version = "1.3.1" }
serde = { version = "1.0.130", features = ["derive"] }
http-serde = { version = "1.0.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
