[package]
name = "simple-pod-example"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { path = "../../kube-rs/kube", default-features = false, features = ["derive"] }
kube-runtime = { path = "../../kube-rs/kube-runtime", default-features = false, features = [] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22", "schemars"] }
futures = "0.3.5"
snafu = "0.6.9"
kube-runtime-abi = { path = "../kube-runtime-abi", version = "^0.0.1" }
chrono = "0.4.10"

schemars = { version = "0.8.3", features = ["chrono"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
log = "^0.4.14"

tokio = { version = "1.8.4", optional = true, features = ["rt-multi-thread", "macros"] }

[features]
client-wasi = ["kube/client-wasi", "kube-runtime/client-wasi"]
client = ["kube/client", "kube-runtime/client", "tokio"]

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
